# akmos

./: CMakeLists.txt  Changelog  LICENSE  README
bench/: CMakeLists.txt  bench.h  cipher.c  digest.c  main.c
cmake/: CheckHeader.txt  CheckSymbol.txt  Flags.txt
doc/man/: CMakeLists.txt  akmos.1  akmos.1.xml
src/: .gitattributes  CMakeLists.txt  akmos.c  akmos.h  base64.c  base64.h  bits.h  bn.c  bn.h  cipher.c  cipher.h  config.h.in  digest.c  digest.h  error.h  kdf.c  mac.c  mac.h  macro.h  mask.h  pxor.c  pxor.h
src/CMake/: CheckHeader.txt
src/algo/: anubis.c  anubis.h  anubis_sb32.h  anubis_sbox.c  blake2b.c  blake2b.h  blowfish.c  blowfish.h  blowfish_sb32.h  blowfish_sbox.c  camellia.c  camellia.h  camellia_sb64.h  camellia_sbox.c  cast6.c  cast6.h  cast6_sb32.h  cast6_sbox.c  chacha.c  chacha.h  rc6.c  rc6.h  rijndael.c  rijndael.h  rijndael_sb32.h  rijndael_sbox.c  ripemd.c  ripemd.h  salsa.c  salsa.h  seed.c  seed.h  seed_sb32.h  seed_sbox.c  serpent.c  serpent.h  sha1.c  sha1.h  sha2.c  sha2.h  (+28 more)
src/algo/amd64/: chacha_sse2.s  salsa_sse2.s  sha3_transform.s  threefish_256.s  threefish_512.s
src/amd64/: pxor.s
src/bn/: add.c  cmp.c
src/cli/: base64.c  cipher.c  cipher.h  cli.h  digest.c  mac.c  main.c  pw.c  pw.h  secur.c  secur.h
src/kdf/: kdf2.c  pbkdf2.c  pbkdf2.h  scrypt.c  scrypt.h
src/mode/: cbc-mac.c  cbc-mac.h  cbc.c  cbc.h  cfb.c  cfb.h  cmac.c  cmac.h  ctr.c  ctr.h  ecb.c  ecb.h  hmac.c  hmac.h  ofb.c  ofb.h
src/xform/: cipher.c  digest.c  mac.c
test/: CMakeLists.txt  digest.c  main.c  mode_ecb.c  path.c  rand.c  test.h
